Positioning on mobile fix

--- a/style.scss
+++ b/style.scss
@@ -256,9 +256,8 @@ body {
   @media (max-width: $breakpoint-sm) {
     display: flex;
     justify-content: center;
-    position: relative;
+    position: static;
     align-items: center;
-    margin-top: 100px;
     padding: 0;
   }
 }
@@ -288,11 +287,10 @@ body {
   }
 
   @media (max-width: $breakpoint-sm) {
-    position: absolute;
-    top: 270px;
+    position: static;
     display: flex;
     justify-content: center;
-    padding: 0 20px 0 5px;
+    padding: 0 20px 0 20px;
   }
 }
 
